@@ -2,22 +2,17 @@ package com.example.musify.service;
 
 
 import com.example.musify.dto.AlbumDTO;
-import com.example.musify.dto.ArtistDTO;
-import com.example.musify.dto.PlaylistDTO;
+import com.example.musify.exception.UnauthorizedException;
 import com.example.musify.mapper.AlbumMapper;
-import com.example.musify.mapper.ArtistMapper;
 import com.example.musify.model.*;
 import com.example.musify.repository.springdata.AlbumRepository;
-import com.example.musify.repository.springdata.ArtistRepository;
 import com.example.musify.repository.springdata.SongRepository;
+import com.example.musify.security.AuthorizationVerifier;
 import com.example.musify.security.JwtUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.webjars.NotFoundException;
 
 import javax.transaction.Transactional;
-import java.sql.Date;
-import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -32,22 +27,23 @@ public class AlbumService implements IAlbumService {
     @Autowired
     private AlbumMapper albumMapper;
 
-    @Autowired
-    private JwtUtils jwtUtils;
 
     @Override
     public List<AlbumDTO> getAllAlbums() {
-        return albumRepository.findAll().stream().map(albumMapper::toAlbumDTO).collect(Collectors.toList());
+        return albumRepository.findAll()
+                .stream()
+                .map(albumMapper::toAlbumDTO)
+                .toList();
     }
 
     @Override
     @Transactional
-    public AlbumDTO saveAlbum(AlbumDTO albumDTO, String token) throws IllegalArgumentException {
-        if (jwtUtils.getRoleFromToken(token).equals(Role.ADMIN)) {
+    public AlbumDTO saveAlbum(AlbumDTO albumDTO) throws UnauthorizedException {
+        if (AuthorizationVerifier.isAdmin()) {
             Album album = albumMapper.toAlbumEntity(albumDTO);
             return albumMapper.toAlbumDTO(albumRepository.save(album));
         }
-        throw new IllegalArgumentException("You do not have permission for this request.");
+        throw new UnauthorizedException("You do not have permission for this request.");
     }
 
     @Override
@@ -67,7 +63,7 @@ public class AlbumService implements IAlbumService {
             album.setLabel(albumDTO.getLabel());
         }
 
-        if (albumDTO.getReleaseDate() != null && !albumDTO.getReleaseDate().equals("")) {
+        if (albumDTO.getReleaseDate() != null) {
             album.setReleaseDate(albumDTO.getReleaseDate());
         }
 
@@ -77,14 +73,14 @@ public class AlbumService implements IAlbumService {
 
     @Override
     @Transactional
-    public AlbumDTO addSongToAlbum(Integer idAlbum, Integer idSong, String token) throws IllegalArgumentException {
+    public AlbumDTO addSongToAlbum(Integer idAlbum, Integer idSong) throws UnauthorizedException {
         Album album = albumRepository.getById(idAlbum);
-        if (jwtUtils.getRoleFromToken(token).equals(Role.ADMIN)) {
+        if (AuthorizationVerifier.isAdmin()) {
             Song song = songRepository.getById(idSong);
             album.getSongs().add(song);
             return albumMapper.toAlbumDTO(album);
         }
-        throw new IllegalArgumentException("You do not have permission for this request.");
+        throw new UnauthorizedException("You do not have permission for this request.");
     }
 
 }
